# multilingual-support-ai

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  language.py  llm.py  main.py  metrics.py  models.py  retrieval.py  safety.py  service.py
data/: knowledge_base.json
evaluation/: golden_set.jsonl  run.py
tests/: test_api.py  test_golden_set.py  test_retrieval.py  test_safety.py
